tests/cases/compiler-development/artifact/errors/diagnostic-parser-block-expression-missing-value.ari
fn main() -> i64 {
  let flag = {
    return 0;
  };
  if flag {
    return 1;
  }
  return 0;
}
